Fixing the calculator style Attempt adding Gap

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,36 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100dvh;
+    width: auto;
+    margin: 0;
+    padding: 0;
+}
+
 .calculator-body {
     display: flex;
+    flex-direction: column;
     width: 20rem;
     height: 30rem;
-    align-items: center;
-    justify-content: center;
     background-color: #f0f0f0;
+}
+.calculator-functions{
+    display: flex;
+}
+
+.calculator-digits-row {
+    display: flex;
+}
+
+.calculator-operations {
+    display: flex;
+    flex-direction: column;
 }
 
 button {
-    padding: 30px;
+    padding: 20px;
+    width: 72px;
+    height: 80px;
 }
